--- a/style/styles.css
+++ b/style/styles.css
@@ -7,7 +7,13 @@ h1 {
     text-shadow: -2px 2px 10px gray;
 }
 
-
+footer {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    background-color: rgba(110, 61, 0, 0.61);
+    padding: 25px 0;
+}
 
 #title {
     background-color: #F0D394;
@@ -49,9 +55,10 @@ h1 {
     background-color: #98651E;
 }
 
+
 .aboutDiv {
     width: 50%;
-    padding: 10rem 10rem;
+    padding: 5% 5%;
 }
 
 .carousel-item {
@@ -60,4 +67,15 @@ h1 {
 
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.466);
+}
+
+.contactDiv {
+    text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+
+#contact {
+    background-color: #F0D394;
 }
